# populi

./: README.md  codecov.yml  docker-compose.yml  flake.nix
.github/workflows/: deploy.yml  lint.yml  test.yml
newscraper/: scraper_expresso.py
scraper/: .env.example  .gitignore  README.md  fetch_wiki_images.py  import_to_db.py  main.py  match_mps.py  pyproject.toml  schema.prisma  scraper_expresso.py  scraper_iniciativas.py  sort_jsons.py
website/: .env.example  .gitignore  SKILLS.md  biome.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
website/app/: globals.css  layout.tsx  page.tsx
website/app/assembleia/: CompositionSvg.tsx
website/app/assembly/: CompositionSvg.tsx  page.tsx
website/app/chat/: page.tsx
website/app/contact/: page.tsx
website/app/deputados/: page.tsx
website/app/deputy/: page.tsx
website/app/faq/: page.tsx
website/app/privacy/: page.tsx
website/app/proposals/: page.tsx
website/app/team/: page.tsx
website/components/: AssemblySection.tsx  CTASection.tsx  ExploreSection.tsx  FilterChip.tsx  Footer.tsx  FooterLink.tsx  Header.tsx  HeaderLink.tsx  HeroSection.tsx  RepresentativeCard.tsx  TrendingSection.tsx  index.ts
website/components/assembly/: AssemblySection.tsx  RepresentativeCard.tsx
website/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ClearChatDialog.tsx  chat-constants.ts
website/components/contact/: ContactForm.tsx
website/components/home/: CTASection.tsx  ExploreSection.tsx  (+2 more)
website/lib/: image-proxy.ts
website/prisma/: schema.prisma  seed.ts
(+41 files in other folders)
