[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.33.1",
    "psycopg[binary]>=3.2.0",
    "lxml>=4.9.0",
    "tqdm>=4.66.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]
